--- a/index.html
+++ b/index.html
@@ -1921,6 +1921,10 @@
 
     </section>
 
+
+    <!-- Scroll Up Button -->
+<button id="scrollUpButton" title="Go to top"><i class="fas fa-angle-double-up"></i></button>
+
   </main>
 
   <!-- footer -->
